src/test/ui/async-await/issue-61949-self-return-type.stderr
error[E0760]: `async fn` return type cannot contain a projection or `Self` that references lifetimes from a parent scope
  --> $DIR/issue-61949-self-return-type.rs:10:40
   |
LL |     pub async fn new(_bar: &'a i32) -> Self {
   |                                        ^^^^ help: consider spelling out the type instead: `Foo<'a>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0760`.
